# crimson-desert-tweaks

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  PROGRESS.md  README.md  README.zh-CN.md
.claude/: settings.json
.claude/hooks/: common.ps1  destructive-git-guard.ps1  game-dir-guard.ps1  no-copy-build.ps1  no-overwrite.ps1  progress-reminder.ps1  proxy-check.ps1  safetyhook-guard.ps1
src/: config.cpp  config.h  config_watcher.cpp  dllmain.cpp  logger.cpp  scanner.cpp  scanner.h  version.rc
src/hooks/: shield_hide.cpp
